[package]
name = "darkomen"
version = "0.3.7"
edition = "2021"
description = "Warhammer: Dark Omen library and CLI in Rust"
repository = "https://github.com/mgi388/darkomen"
license = "MIT OR Apache-2.0"
exclude = ["testdata/"]

[features]
default = ["cli"]
asset = [
    "dep:bevy_app",
    "dep:bevy_asset",
    "dep:bevy_derive",
    "dep:bevy_ecs",
    "dep:bevy_image",
    "dep:bevy_kira_audio",
    "dep:bevy_math",
    "dep:bevy_pbr",
    "dep:bevy_render",
    "dep:bevy_sprite",
    "dep:bevy_utils",
    "dep:bevy-kira-components",
    "dep:dyn-clone",
]
bevy_reflect = ["dep:bevy_reflect"]
cli = ["dep:anyhow", "dep:clap", "dep:ron", "dep:serde_json", "dep:tempfile"]

[dependencies]
anyhow = { version = "1", optional = true }
bitflags = { version = "2.6", features = ["serde"] }
clap = { version = "4", features = ["derive"], optional = true }
derive_more = { version = "1", default-features = false, features = [
    "display",
    "error",
    "from",
] }
encoding_rs = "0.8"
encoding_rs_io = "0.1"
glam = { version = "0.29", default-features = false, features = ["serde"] }
hound = "3.5"
image = "0.25"
indexmap = { version = "2", features = ["serde"] }
num_enum = "0.7"
rand = "0.8"
ron = { version = "0.8", optional = true }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", optional = true }
tempfile = { version = "3", optional = true }

[dependencies.bevy_app]
version = "0.15"
optional = true

[dependencies.bevy_asset]
version = "0.15"
optional = true

[dependencies.bevy_derive]
version = "0.15"
optional = true

[dependencies.bevy_ecs]
version = "0.15"
optional = true

[dependencies.bevy_image]
version = "0.15"
optional = true

[dependencies.bevy_kira_audio]
version = "0.21"
default-features = false
features = ["wav"]
optional = true

[dependencies.bevy-kira-components]
git = "https://github.com/mgi388/bevy-kira-components.git"
branch = "bevy-0.15-fixes1"
optional = true

[dependencies.bevy_math]
version = "0.15"
optional = true

[dependencies.bevy_pbr]
version = "0.15"
optional = true

[dependencies.bevy_reflect]
version = "0.15"
default-features = false
features = ["glam"]
optional = true

[dependencies.bevy_render]
version = "0.15"
optional = true

[dependencies.bevy_sprite]
version = "0.15"
optional = true

[dependencies.bevy_utils]
version = "0.15"
optional = true

[dependencies.dyn-clone]
version = "1"
optional = true

[dev-dependencies]
# Enable the `bevy_reflect` feature when testing.
darkomen = { path = ".", features = ["bevy_reflect"] }
imageproc = "0.25"
pretty_assertions = "1.4"
rand_chacha = "0.3"
regex = "1.11"
ron = "0.8"
sha2 = "0.10"

[package.metadata.docs.rs]
all-features = true
