[package]
name = "darkomen"
version = "0.3.8"
edition = "2021"
description = "Warhammer: Dark Omen library and CLI in Rust"
repository = "https://github.com/mgi388/darkomen"
license = "MIT OR Apache-2.0"
exclude = ["testdata/"]

[features]
default = ["cli", "debug"]
asset = [
    "dep:bevy_app",
    "dep:bevy_asset",
    "dep:bevy_ecs",
    "dep:bevy_image",
    "dep:bevy_math",
    "dep:bevy_reflect",
]
bevy_reflect = ["dep:bevy_reflect"]
cli = ["dep:anyhow", "dep:clap", "dep:ron", "dep:serde_json", "dep:tempfile"]
debug = []

[dependencies]
anyhow = { version = "1.0", optional = true }
bitflags = { version = "2.10", features = ["serde"] }
clap = { version = "4.5", features = ["derive"], optional = true }
derive_more = { version = "2", default-features = false, features = [
    "display",
    "error",
    "from",
] }
encoding_rs = "0.8"
encoding_rs_io = "0.1"
glam = { version = "0.30.1", default-features = false, features = [
    "serde",
    "std",
] }
hound = "3.5"
image = "0.25"
indexmap = { version = "2", features = ["serde"] }
num_enum = "0.7"
rand = "0.9"
ron = { version = "0.12", optional = true }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", optional = true }
tempfile = { version = "3", optional = true }

# Bevy engine.
bevy_app = { version = "0.17", optional = true }
bevy_asset = { version = "0.17", optional = true }
bevy_derive = { version = "0.17" }
bevy_ecs = { version = "0.17", optional = true }
bevy_image = { version = "0.17", optional = true }
bevy_math = { version = "0.17", optional = true }
bevy_reflect = { version = "0.17", default-features = false, features = [
    "glam",
    "std",
], optional = true }

[dev-dependencies]
# Enable the `bevy_reflect` feature when testing.
darkomen = { path = ".", features = ["bevy_reflect"] }
imageproc = "0.26"
pretty_assertions = "1.4"
rand_chacha = "0.9"
regex = "1.11"
ron = "0.12"
sha2 = "0.10"

[package.metadata.docs.rs]
all-features = true
